--- a/pages/home.html
+++ b/pages/home.html
@@ -71,7 +71,7 @@
                         <td>&nbsp;</td>
                         <td colspan="2" rowspan="2">
                             <p><a title="Booth map" href="booth.html">
-                                    <img src="../images/booth_F87.png" width="320" height="128" alt="Booth F87">
+                                    <img src="../images/tiles/comeSeeUs.png" width="320" height="128" alt="Booth F87">
                                 </a></p>
                             <p><a title="Momentum Magazine" href="../media/momentum.pdf">
                                     <img src="../images/banners/momentum.png" width="320" height="164" alt="Magazine" style="margin-bottom: -2em;">
@@ -80,7 +80,7 @@
                     </tr>
                     <tr>
                         <td class="blocks"><p>
-                                <img src="../images/tile_home_events.png" width="307" height="120">
+                                <img src="../images/tiles/home_events.png" width="307" height="120">
                             </p>
                             <p><strong>Renew friendships and create new ones. </strong></p>
                             <p>We’re proud to be hosting our annual Sibos
@@ -92,7 +92,7 @@
                                 trade corridors.” </p></td>
                         <td>&nbsp;</td>
                         <td class="blocks"><p>
-                                <img src="../images/tile_home_getInvolved.png" width="225" height="121">
+                                <img src="../images/tiles/home_getInvolved.png" width="225" height="121">
                             </p>
                             <p><strong>By working together</strong>, we can make a difference in our international communities. </p>
                             <p>You are invited, for the third year in a row, to cast a vote for one of four nonprofits that
