--- a/pages/giving.html
+++ b/pages/giving.html
@@ -122,8 +122,8 @@
                                 <p><em>The BreadTin</em> is a new giving club that teaches young
                                     professionals about philanthropy in London and raises
                                     funds for its selected charity, HERA: Women Entrepreneurs Against Trafficking. (Community Development)</p>
-                                <p><em>&ldquo;By joining a giving club through
                                         the BreadTin, I know I can create a bigger impact on the selected charity and have more influence
+                                <p><img src="#" alt="FPO" class="headshot"><em>&ldquo;By joining a giving club through
                                         on the charitable project than I&rsquo;d have if I were to donate on my own. Our selected charity
                                         and its beneficiaries receive their much needed financial support, whilst I have gained
                                         experience in team-work and negotiation skills. I have also met like-minded people who have
@@ -142,7 +142,7 @@
                                     works in seven countries around the world to help victims
                                     of war and civil conflict rebuild their lives.
                                     (Human Services) </p>
-                                <p><em>&ldquo;ARC is building a 21st Century
+                                <p><img src="#" alt="FPO" class="headshot"><em>&ldquo;ARC is building a 21st Century
                                         humanitarian organization rooted in co-creating with committed people to provide more meaningful
                                         solutions to humanitarian crises worldwide. &nbsp;My work with ARC had me engaged in facilitating
                                         meaningful partnerships between ARC and Middle Eastern NGO counterparts to engage in projects in
@@ -164,7 +164,7 @@
                                 <p><em>Dubai Center for Special Needs</em> provides specialized education and
                                     therapy for children with various disabilities.
                                     (Education)</p>
-                                <p><em>&ldquo;The teachers at DCSN are truly amazing and treat all the kids with love
+                                <p><img src="#" alt="FPO" class="headshot"><em>&ldquo;The teachers at DCSN are truly amazing and treat all the kids with love
                                         and compassion. One thing I learnt from them; you can embrace life
                                         and have fun, no matter your circumstances.&rdquo; </em></p>
                                 <p><strong>— Dalene Byrnes</strong>, GFI DIFC Branch </p>
@@ -179,7 +179,7 @@
                                     </em></p>
                                 <p><em>Project Vietnam Foundation</em> works on creating sustainable pediatric healthcare in Vietnam,
                                     while providing free healthcare and aid to impoverished rural areas across the country. (Human Services) </p>
-                                <p>&ldquo;<em>Apart from providing free surgery,
+                                <p><img src="#" alt="FPO" class="headshot">&ldquo;<em>Apart from providing free surgery,
                                         dental and medical checks for poor children in rural areas, Project Vietnam has multiplied its
                                         ability to provide sustainable medical support to kids through its strategy to train the
                                         trainers. Over the last 3 years, 200 instructors and 3,000 health care workers have been trained
