--- a/pages/about.html
+++ b/pages/about.html
@@ -85,7 +85,7 @@
                                     London, Seoul, Shanghai, Singapore, Taipei, Tokyo, Toronto, and the Cayman Islands</li>
                                 <li>More than 3,000 team members covering the global needs of our clients</li>
                                 <li>Relationships with over 2,000 financial institutions overseas and in the U.S.</li>
-                                <li>Customers in over 125 countries</li>
+                                <li>Customers in 125 countries</li>
                             </ul>
                             <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p></td>
                         <td>&nbsp;</td>
