add remaining banners

--- a/pages/giving.html
+++ b/pages/giving.html
@@ -46,8 +46,8 @@
             <!-- #EndLibraryItem -->
             <div id="feature">
                 <section id="Banner">
-                    <img class="" src="../images/banners/home.png" alt="">
-                    <img class="banner1" src="../images/header/reins.png" alt="">
+                    <img class="" src="../images/banners/charitableGivingPage.jpg" alt="">
+                    <img class="banner" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
                     <tr>
