--- a/pages/booth.html
+++ b/pages/booth.html
@@ -47,7 +47,7 @@
             <div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/boothPage.jpg" alt="">
-                    <img class="banner1" src="../images/header/reins.png" alt="">
+                    <img class="banner" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
                     <tr>
