--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
             window.isIE = true;
             $(function(){ $('html').addClass('msie'); });
             </script><![endif]-->
-        <script src="../scripts/main.js"></script>
+        <script src="../scripts/load.js"></script>
     </head>
     <body>
         <div id="Page">
