clean banner inits

--- a/pages/home.html
+++ b/pages/home.html
@@ -49,7 +49,7 @@
                     <img class="fade" src="../images/banners/aboutWF.png" alt="">
                     <img class="fade" src="../images/banners/exploreDubai.png" alt="">
                     <img class="fade" src="../images/banners/giveaway_orange.png" alt="">
-                    <img class="fade click2run" src="../images/banners/home.png" alt="">
+                    <img class="fade" src="../images/banners/home.png" alt="">
                     <img class="fade" src="../images/banners/pony.png" alt="">
                     <img class="banner1" src="../images/header/reins.png" alt="">
                 </section>
