--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -47,7 +47,7 @@
             <div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/sibosSpeakerPage.jpg" alt="">
-                    <img class="banner" src="../images/header/reins.png" alt="">
+                    <img class="reins-small" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
                 <tr>
