--- a/pages/home.html
+++ b/pages/home.html
@@ -51,7 +51,7 @@
                     <img class="fade" src="../images/banners/giveaway_orange.png" alt="">
                     <img class="fade" src="../images/banners/home.png" alt="">
                     <img class="fade" src="../images/banners/pony.png" alt="">
-                    <img class="reins-large" src="../images/header/reins.png" alt="">
+                    <img class="reins large" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
                     <tr>
