--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,7 @@
             <div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/aboutWellsFargoPage.png" alt="">
-                    <img class="reins-small" src="../images/header/reins.png" alt="">
+                    <img class="reins small" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
                     <tr>
