--- a/pages/home.html
+++ b/pages/home.html
@@ -110,7 +110,7 @@
                     </tr>
                 </table>
                 <div class="popup">
-                    <img id="booth_map" src="../images/booth_map.gif" tabindex="-1">
+                    <img id="booth_map" src="../images/photos/booth_map.gif" tabindex="-1">
                     <br>
                     CLICK OUTSIDE IMAGE TO CLOSE
                 </div>
