--- a/pages/home.html
+++ b/pages/home.html
@@ -93,7 +93,7 @@
                                 trade corridors.” </p></td>
                         <td>&nbsp;</td>
                         <td class="blocks"><p>
-                                <img src="../images/tiles/home_getInvolved.png" width="225" height="121">
+                                <img src="../images/tiles/home_getInvolved.jpg" width="225" height="121">
                             </p>
                             <p><strong>By working together</strong>, we can make a difference in our international communities. </p>
                             <p>You are invited, for the third year in a row, to cast a vote for one of four nonprofits that
