start charity pics

--- a/pages/giving.html
+++ b/pages/giving.html
@@ -122,7 +122,8 @@
                                 <p><em>The Bread Tin</em> is a new giving club that teaches young
                                     professionals about philanthropy in London and raises
                                     funds for its selected charity, HERA: Women Entrepreneurs Against Trafficking. (Community Development)</p>
-                                <p><img src="#" alt="FPO" class="headshot"><em>&ldquo;By joining a giving club through
+                                <p><a title="charity_BreadTin" class="popup pic"><img src="../images/photos/charity_BreadTin.jpg" alt="FPO" class="headshot"></a><em>&ldquo;By
+                                        joining a giving club through
                                         The Bread Tin, I know I can create a bigger impact on the selected charity and have more influence
                                         on the charitable project than I&rsquo;d have if I were to donate on my own. Our selected charity
                                         and its beneficiaries receive their much needed financial support, whilst I have gained
@@ -142,7 +143,7 @@
                                     works in seven countries around the world to help victims
                                     of war and civil conflict rebuild their lives.
                                     (Human Services) </p>
-                                <p><img src="#" alt="FPO" class="headshot"><em>&ldquo;ARC is building a 21st Century
+                                <p><a title="charity_ARC" class="popup pic"><img src="../images/photos/charity_ARC.jpg" alt="FPO" class="headshot"></a><em>&ldquo;ARC is building a 21st Century
                                         humanitarian organization rooted in co-creating with committed people to provide more meaningful
                                         solutions to humanitarian crises worldwide. &nbsp;My work with ARC had me engaged in facilitating
                                         meaningful partnerships between ARC and Middle Eastern NGO counterparts to engage in projects in
@@ -164,7 +165,7 @@
                                 <p><em>Dubai Center for Special Needs</em> provides specialized education and
                                     therapy for children with various disabilities.
                                     (Education)</p>
-                                <p><img src="#" alt="FPO" class="headshot"><em>&ldquo;The teachers at DCSN are truly amazing and treat all the kids with love
+                                <p><a title="charity_DubaiCenter" class="popup pic"><img src="../images/photos/charity_DubaiCenter.jpg" alt="FPO" class="headshot"></a><em>&ldquo;The teachers at DCSN are truly amazing and treat all the kids with love
                                         and compassion. One thing I learnt from them; you can embrace life
                                         and have fun, no matter your circumstances.&rdquo; </em></p>
                                 <p><strong>— Dalene Byrnes</strong>, GFI DIFC Branch </p>
@@ -179,7 +180,7 @@
                                     </em></p>
                                 <p><em>Project Vietnam Foundation</em> works on creating sustainable pediatric healthcare in Vietnam,
                                     while providing free healthcare and aid to impoverished rural areas across the country. (Human Services) </p>
-                                <p><img src="#" alt="FPO" class="headshot">&ldquo;<em>Apart from providing free surgery,
+                                <p><a title="charity_ProjectVietnam" class="popup pic"><img src="../images/photos/charity_ProjectVietnam.jpg" alt="FPO" class="headshot"></a>&ldquo;<em>Apart from providing free surgery,
                                         dental and medical checks for poor children in rural areas, Project Vietnam has multiplied its
                                         ability to provide sustainable medical support to kids through its strategy to train the
                                         trainers. Over the last 3 years, 200 instructors and 3,000 health care workers have been trained
@@ -199,6 +200,26 @@
                     Wells Fargo has provided this link for your convenience, <br>
                     but does not endorse and is not responsible for the content, links, privacy policy,
                     or security policy of this website.</p>
+                <div class="popup">
+                    <img id="charity_BreadTin" src="../images/photos/charity_BreadTin.jpg" tabindex="-1">
+                    <br>
+                    CLICK OUTSIDE IMAGE TO CLOSE
+                </div>
+                <div class="popup">
+                    <img id="charity_ARC" src="../images/photos/charity_ARC.jpg" tabindex="-1">
+                    <br>
+                    CLICK OUTSIDE IMAGE TO CLOSE
+                </div>
+                <div class="popup">
+                    <img id="charity_DubaiCenter" src="../images/photos/charity_DubaiCenter.jpg" tabindex="-1">
+                    <br>
+                    CLICK OUTSIDE IMAGE TO CLOSE
+                </div>
+                <div class="popup">
+                    <img id="charity_ProjectVietnam" src="../images/photos/charity_ProjectVietnam.jpg" tabindex="-1">
+                    <br>
+                    CLICK OUTSIDE IMAGE TO CLOSE
+                </div>
             </div>
             <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
