--- a/pages/home.html
+++ b/pages/home.html
@@ -46,12 +46,12 @@
             <!-- #EndLibraryItem -->
             <div id="feature">
                 <section id="Banner">
-                    <img class="fade" src="../images/banners/aboutWF.png" alt="">
-                    <img class="fade" src="../images/banners/exploreDubai.png" alt="">
-                    <img class="fade" src="../images/banners/giveaway_orange.png" alt="">
-                    <img class="fade" src="../images/banners/pony.png" alt="">
-                    <img class="fade" src="../images/banners/home.png" alt="">
-                    <img class="fade" src="../images/banners/home.png" alt="">
+                    <img class="fade" src="../images/banners/aboutWF.png"           alt="ABOUT WELLS FARGO • We’re one of the largest financial institutions in the U.S. and serve 70 million customers in 125 countries around the world.">
+                    <img class="fade" src="../images/banners/exploreDubai.png"      alt="EXPLORE DUBAI • Home to over two million people, this cosmopolitan gateway between the east and west features architecture, attractions, and opportunities unlike anything you'll find elsewhere in the world.">
+                    <img class="fade" src="../images/banners/giveaway_orange.png"   alt="Want one of these? • Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
+                    <img class="fade" src="../images/banners/pony.png"              alt="Share your pony story with us #WFPony">
+                    <img class="fade" src="../images/banners/home.png"              alt="JOIN US IN DUBAI September 16 – 19, 2013">
+                    <img class="fade" src="../images/banners/home.png"              alt="JOIN US IN DUBAI September 16 – 19, 2013">
                     <img class="reins large" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
@@ -84,13 +84,10 @@
                                 <img src="../images/tiles/home_events.png" width="307" height="120">
                             </p>
                             <p><strong>Renew friendships and create new ones. </strong></p>
-                            <p>We’re proud to be hosting our annual Sibos
-                                Celebration reception at Dubai’s most prestigious
-                                landmark – Burj Khalifa – the tallest structure in
-                                the world. In addition, we’ll be hosting a welcome
-                                reception at the Wells Fargo Sibos booth and a
-                                breakfast seminar on “Rapidly evolving payment and
-                                trade corridors.” </p></td>
+                            <p>We’re proud to be hosting our annual Sibos Celebration reception at Dubai’s most prestigious
+                                landmark – Burj Khalifa – the tallest structure in the world.
+                                In addition, we’ll be hosting a welcome reception at the Wells Fargo Sibos booth and a
+                                breakfast seminar on “Rapidly evolving payment and trade corridors.” </p></td>
                         <td>&nbsp;</td>
                         <td class="blocks"><p>
                                 <img src="../images/tiles/home_getInvolved.jpg" width="225" height="121">
