swap in newer art

--- a/pages/booth.html
+++ b/pages/booth.html
@@ -69,7 +69,7 @@
                           href="../images/misc/photos/booth_map.pdf">View exhibition floor map</a> </p></td>
                     <td>&nbsp;</td>
                     <td><p>
-                            <img src="../images/tiles/booth_giveaway.png" width="320" height="254" alt="Check in to our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
+                            <img src="../images/tiles/booth_giveaway.jpg" width="320" height="254" alt="Check in to our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
                         </p></td>
                     </tr>
                     <tr>
