--- a/pages/home.html
+++ b/pages/home.html
@@ -48,8 +48,8 @@
                 <section id="Banner">
                     <img class="fade" src="../images/banners/aboutWF.png"           alt="ABOUT WELLS FARGO • We’re one of the largest financial institutions in the U.S. and serve 70 million customers in 125 countries around the world.">
                     <img class="fade" src="../images/banners/exploreDubai.png"      alt="EXPLORE DUBAI • Home to over two million people, this cosmopolitan gateway between the east and west features architecture, attractions, and opportunities unlike anything you'll find elsewhere in the world.">
-                    <img class="fade" src="../images/banners/giveaway_orange.png"   alt="Want one of these? • Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
-                    <img class="fade" src="../images/banners/pony.png"              alt="Share your pony story with us #WFPony">
+                    <img class="fade" src="../images/banners/giveaway_ochre.jpg"    alt="Want one of these? • Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
+                    <img class="fade" src="../images/banners/pony.jpg"              alt="Share your pony story with us #WFPony">
                     <img class="fade" src="../images/banners/home.png"              alt="JOIN US IN DUBAI September 16 – 19, 2013">
                     <img class="fade" src="../images/banners/home.png"              alt="JOIN US IN DUBAI September 16 – 19, 2013">
                     <img class="reins large" src="../images/header/reins.png" alt="">
