--- a/pages/booth.html
+++ b/pages/booth.html
@@ -63,8 +63,10 @@
                         Buffalo Bill stagecoach and learn more about the history of Wells Fargo.</p>
                     <p><strong>Explore. </strong>Experience all the exciting new enhancements
                         we&rsquo;ve made to our Sibos booth this year.</p>
-                    <p><strong>Connect.</strong> Our senior leadership and relationship managers look
-                        forward to connecting with you in our booth. </p>
+                    <p><strong>Connect.</strong>
+                        Our senior leadership and relationship managers look forward to connecting with you in our booth.
+                        You can also watch the TEDX UN Plaza conference from our booth. For more information about the sessions and speakers,
+                        please visit <a href="http://tedxunplaza.com">http://tedxunplaza.com</a> </p>
                     <p><a title="booth_map" class="popup pic"
                           href="../images/misc/photos/booth_map.pdf">View exhibition floor map</a> </p></td>
                     <td>&nbsp;</td>
