--- a/pages/about.html
+++ b/pages/about.html
@@ -51,11 +51,11 @@
                 </section>
                 <table>
                     <tr>
-                        <td width="65%"><h2>About Wells Fargo</h2></td>
+                        <td><h2>About Wells Fargo</h2></td>
                         <td colspan="2">&nbsp;</td>
                     </tr>
                     <tr>
-                        <td width="65%" rowspan="2"><p>Wells Fargo is one of the largest banks in the United States,
+                        <td rowspan="3"><p>Wells Fargo is one of the largest banks in the United States,
                                 and is the most valuable bank in the world in terms of market capitalization.
                                 Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
                                 mortgage, consumer, and commercial finance through various distribution channels. We have offices in more than
@@ -69,8 +69,8 @@
                         <td valign="top" class="blocks ribron"><h3>Resources</h3></td>
                     </tr>
                     <tr>
-                        <td width="2%">&nbsp;</td>
-                        <td width="30%" valign="top" class="blocks"><p><strong>Learn more about Wells Fargo</strong></p>
+                        <td rowspan="2">&nbsp;</td>
+                        <td valign="top" class="blocks"><p><strong>Learn more about Wells Fargo</strong></p>
                             <ul>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/wellsfargotoday.pdf">Wells Fargo Today</a></li>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/csr/reports/2012-social-responsibility-interim.pdf">Social Responsibility report</a></li>
@@ -78,7 +78,11 @@
                             </ul></td>
                     </tr>
                     <tr>
-                        <td colspan="2"><p><strong>Our global presence includes: </strong></p>
+                        <td><p>&nbsp;</p>
+                        <p>&nbsp;</p></td>
+                    </tr>
+                    <tr>
+                        <td><p><strong>Our global presence includes: </strong></p>
                             <ul>
                                 <li>Worldwide reach with over 35 overseas offices and branch locations in DIFC,
                                     Hong Kong, <br>
@@ -89,11 +93,12 @@
                             </ul>
                             <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p></td>
                         <td>&nbsp;</td>
+                        <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
+                        <td width="66%">&nbsp;</td>
+                        <td width="3%">&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
                     </tr>
                 </table>
             </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
