--- a/pages/explore.html
+++ b/pages/explore.html
@@ -112,7 +112,9 @@
                             </ul></td>
                     </tr>
                     <tr>
-                        <td>&nbsp;</td>
+                        <td><p>&nbsp;</p>
+                        <p>&nbsp;</p>
+                        <p>&nbsp;</p></td>
                 </tr>
                     <tr>
                         <td width="66%">&nbsp;</td>
