--- a/pages/about.html
+++ b/pages/about.html
@@ -55,7 +55,8 @@
                         <td colspan="2">&nbsp;</td>
                     </tr>
                     <tr>
-                        <td rowspan="3"><p>Wells Fargo is one of the largest banks in the United States,
+                        <td rowspan="3"><article>
+                            <p>Wells Fargo is one of the largest banks in the United States,
                                 and is the most valuable bank in the world in terms of market capitalization.
                                 Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
                                 mortgage, consumer, and commercial finance through various distribution channels. We have offices in more than
@@ -64,7 +65,8 @@
                                 We&rsquo;ve operated under the same vision for decades: We want to satisfy all our customers&rsquo;
                                 financial needs and help them succeed financially. The GFI team executes this vision by serving the
                                 increasing financial needs of financial institutions, central banks, multi-laterals, sovereign wealth funds,
-                                and non-bank financial institutions in the markets where we conduct business.</p></td>
+                                and non-bank financial institutions in the markets where we conduct business.</p>
+                        </article></td>
                         <td>&nbsp;</td>
                         <td valign="top" class="blocks ribron"><h3>Resources</h3></td>
                     </tr>
