--- a/pages/events.html
+++ b/pages/events.html
@@ -52,6 +52,7 @@
                 <table>
                     <tr>
                         <td colspan="5"><h2>Sibos Events</h2>
+                        <article>
                             <p>Renew friendships and create new ones.
                                 We&rsquo;re proud to be hosting our annual Sibos
                                 Celebration reception at Dubai&rsquo;s most
@@ -60,7 +61,8 @@
                                 be hosting a welcome reception at the Wells Fargo
                                 Sibos booth and a breakfast seminar on
                                 &ldquo;Rapidly evolving payment and trade
-                                corridors.&rdquo;</p></td>
+                                corridors.&rdquo;</p>
+                        </article></td>
                     </tr>
                     <tr>
                         <td class="blocks ribron"><h3>Annual Celebration</h3></td>
