--- a/pages/giving.html
+++ b/pages/giving.html
@@ -64,7 +64,8 @@
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td><p> At Wells Fargo, we&rsquo;re
+                        <td><article>
+                            <p> At Wells Fargo, we&rsquo;re
                                 committed to providing community solutions – local
                                 responses to local needs. We promote economic
                                 development and self-sufficiency through community
@@ -87,7 +88,8 @@
                             <p>And now, by working together with you, we can make a difference in our international communities.
                                 You are invited, for the third year in a row, to cast a vote for one of four nonprofits (noted below)
                                 that make a difference in  our local communities. Based on this poll held at our Wells Fargo Sibos reception,
-                                Wells Fargo will donate a total of USD$10,000 to these four charities.</p></td>
+                                Wells Fargo will donate a total of USD$10,000 to these four charities.</p>
+                        </article></td>
                         <td rowspan="2"><div class="tofix">
                                 <table>
                                     <tr>
