update charity photos

--- a/pages/giving.html
+++ b/pages/giving.html
@@ -202,24 +202,32 @@
                     but does not endorse and is not responsible for the content, links, privacy policy,
                     or security policy of this website.</p>
                 <div class="popup">
+                    CLICK OUTSIDE IMAGE TO CLOSE<br>
+                    <br>
                     <img id="charity_BreadTin" src="../images/photos/charity_BreadTin.jpg" tabindex="-1">
                     <br>
-                    CLICK OUTSIDE IMAGE TO CLOSE
+                    Wells Fargo volunteer, Loretta Wong (far left)
                 </div>
                 <div class="popup">
+                    CLICK OUTSIDE IMAGE TO CLOSE<br>
+                    <br>
                     <img id="charity_ARC" src="../images/photos/charity_ARC.jpg" tabindex="-1">
                     <br>
-                    CLICK OUTSIDE IMAGE TO CLOSE
+                    Wells Fargo volunteer, Adel el-Huni (pictured)
                 </div>
                 <div class="popup">
+                    CLICK OUTSIDE IMAGE TO CLOSE<br>
+                    <br>
                     <img id="charity_DubaiCenter" src="../images/photos/charity_DubaiCenter.jpg" tabindex="-1">
                     <br>
-                    CLICK OUTSIDE IMAGE TO CLOSE
+                    Wells Fargo volunteer, Dalene Byrnes (pictured)
                 </div>
                 <div class="popup">
+                    CLICK OUTSIDE IMAGE TO CLOSE<br>
+                    <br>
                     <img id="charity_ProjectVietnam" src="../images/photos/charity_ProjectVietnam.jpg" tabindex="-1">
                     <br>
-                    CLICK OUTSIDE IMAGE TO CLOSE
+                    Wells Fargo volunteer, Linh Trinh (second from left)
                 </div>
             </div>
             <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
