--- a/pages/events.html
+++ b/pages/events.html
@@ -21,26 +21,18 @@
             <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
-                    <img src="../images/header/wf-sibos.png" alt="Sibos 2013" width="222" height="64" align="left">
-                    <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right">
+                    <a href="./home.html"><img class="logo" src="../images/header/wf-sibos.png" alt="Sibos 2013"></a>
+                    <a href="//wellsfargo.com"><img class="stage" src="../images/header/stagecoach.png" alt="Together we’ll go far"></a>
                 </div>
-                <div class="navb">
-                    <!--  -->
-                    <a href="home.html">Home</a>
-                    <!--  -->
-                    <a href="about.html">About Wells Fargo</a>
-                    <!--  -->
-                    <a href="events.html">Sibos Events</a>
-                    <!--  -->
-                    <a href="booth.html">Wells Fargo Booth</a>
-                    <!--  -->
-                    <a href="speakers.html">Sibos Speakers</a>
-                    <!--  -->
-                    <a href="explore.html">Explore Dubai</a>
-                    <!--  -->
-                    <a href="giving.html">Charitable giving</a>
-                    <!--  -->
-                </div>
+                <nav>
+                    <!--  --> <a href="./home.html">Home</a>
+                    <!--  --> <a href="./about.html">About Wells Fargo</a>
+                    <!--  --> <a href="./events.html">Sibos Events</a>
+                    <!--  --> <a href="./booth.html">Wells Fargo Booth</a>
+                    <!--  --> <a href="./speakers.html">Sibos Speakers</a>
+                    <!--  --> <a href="./explore.html">Explore Dubai</a>
+                    <!--  --> <a href="./giving.html">Charitable giving</a>
+                </nav>
             </header>
             <!-- #EndLibraryItem -->
             <div id="feature">
