compact the nav bar

--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,6 @@
     </head>
     <body>
         <div id="Page">
-            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
                     <a href="./home.html"><img class="logo" src="../images/header/wf-sibos.png" alt="Sibos 2013"></a>
@@ -28,13 +27,12 @@
                     <!--  --> <a href="./home.html">Home</a>
                     <!--  --> <a href="./about.html">About Wells Fargo</a>
                     <!--  --> <a href="./events.html">Sibos Events</a>
-                    <!--  --> <a href="./booth.html">Wells Fargo Booth</a>
+                    <!--  --> <a href="./booth.html">Our Booth</a>
                     <!--  --> <a href="./speakers.html">Sibos Speakers</a>
                     <!--  --> <a href="./explore.html">Explore Dubai</a>
                     <!--  --> <a href="./giving.html">Charitable giving</a>
                 </nav>
             </header>
-            <!-- #EndLibraryItem -->
             <div id="feature">
                 <section id="Banner">
                     <img class="fade bnr1" src="../images/banners/home.png"             alt="JOIN US IN DUBAI September 16 – 19, 2013">
