--- a/pages/explore.html
+++ b/pages/explore.html
@@ -55,7 +55,8 @@
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td rowspan="3"><ul>
+                        <td rowspan="3"><article>
+                            <ul>
                                 <li><a
                                         href="http://www.tripadvisor.com/Attraction_Review-g295424-d676922-Reviews-Burj_Khalifa-Dubai_Emirate_of_Dubai.html">Burj
                                         Khalifa</a>
@@ -86,7 +87,8 @@
                                     one of the largest tanks in the
                                     world, is home to more than 33,000 animals and sea creatures you can examine
                                     from inside its acrylic walk-through tunnel.</li>
-                            </ul></td>
+                            </ul>
+                        </article></td>
                         <td rowspan="3">&nbsp;</td>
                         <td class="blocks ribron"><h3>Resources</h3></td>
                     </tr>
