--- a/pages/giving.html
+++ b/pages/giving.html
@@ -102,7 +102,7 @@
                             </div></td>
                     </tr>
                     <tr>
-                        <td>
+                        <td><article>
                             <div id="bread">
                                 <h3>The Bread Tin</h3>
                                 <p>
@@ -177,7 +177,8 @@
                                         trainers. Over the last 3 years, 200 instructors and 3,000 health care workers have been trained
                                         at 14 training centers across the country. A simple set of devices and a trained health worker
                                         can save a baby at birth.&rdquo;</em></p>
-                                <p><strong>— Linh Trinh</strong>, GFI Vietnam office</p></td>
+                                <p><strong>— Linh Trinh</strong>, GFI Vietnam office</p>
+                        </article></td>
                     </tr>
                     <tr>
                         <td width="66%">&nbsp;</td>
