--- a/pages/about.html
+++ b/pages/about.html
@@ -73,7 +73,8 @@
                             <p>&nbsp;</p></td>
                     </tr>
                     <tr>
-                        <td><p><strong>Our global presence includes: </strong></p>
+                        <td><article>
+                            <p><strong>Our global presence includes: </strong></p>
                             <ul>
                                 <li>Worldwide reach with over 35 overseas offices and branch locations in DIFC,
                                     Hong Kong, <br>
@@ -82,7 +83,8 @@
                                 <li>Relationships with over 2,000 financial institutions overseas and in the U.S.</li>
                                 <li>Customers in 125 countries</li>
                             </ul>
-                            <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p></td>
+                            <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p>
+                        </article></td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
