--- a/pages/giving.html
+++ b/pages/giving.html
@@ -178,6 +178,7 @@
                                         at 14 training centers across the country. A simple set of devices and a trained health worker
                                         can save a baby at birth.&rdquo;</em></p>
                                 <p><strong>— Linh Trinh</strong>, GFI Vietnam office</p>
+                            </div>
                         </article></td>
                     </tr>
                     <tr>
@@ -204,14 +205,14 @@
                     <br>
                     <img id="charity_ARC" src="../images/photos/charity_ARC.jpg" tabindex="-1">
                     <br>
-                    Wells Fargo volunteer, Adel el-Huni (pictured)
+                    Wells Fargo DIFC branch volunteer, Adel el-Huni
                 </div>
                 <div class="popup">
                     CLICK OUTSIDE IMAGE TO CLOSE<br>
                     <br>
                     <img id="charity_DubaiCenter" src="../images/photos/charity_DubaiCenter.jpg" tabindex="-1">
                     <br>
-                    Wells Fargo volunteer, Dalene Byrnes (pictured)
+                    Wells Fargo DIFC branch volunteers, including Dalene Byrnes (far right)
                 </div>
                 <div class="popup">
                     CLICK OUTSIDE IMAGE TO CLOSE<br>
