--- a/pages/test.html
+++ b/pages/test.html
@@ -35,6 +35,9 @@
                 </nav>
             </header>
             <div id="feature">
+                <section id="Banner">
+                    <img class="" src="../images/banners/exploreDubaiPage.png" alt="">
+                </section>
                 <div class="iphone">
                     <header class="mini">
                         <div class="mast"><button class="share holdon">+</button><img align="left" alt="Sibos_2013" class="rube" src="./mobile/rube.png" width="32">
@@ -50,38 +53,25 @@
                             <h2 class="chevar"><a href="#Compositions_Giving">Charitable giving</a></h2>
                             <h2 class="chevar"><a href="#Compositions_Photos">Gallery</a></h2>
                         </nav>
-                        <div class="buttonys">
-                            <a class="details" href="index.html"></a>  <button class="home">&lt; <a href="#Components_Comps_header_content2">Mobile</a></button>
-                        </div>
                     </header>
                 </div>
-                    <img class="reins small" src="../images/header/reins.png" alt="">
-
+                <img class="reins small" src="../images/header/reins.png" alt="">
                 <p class="shrink">*You may need a reader to view PDF files. <a
                         href="https://www.google.com/search?q=free+pdf+viewer">Download</a> one for free.</p>
             </div>
-            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
                     <p class="cap">Share this page
-                        <!--  -->
-                        <span id="st_twitter"></span>
-                        <!--  -->
-                        <span id="st_linkedin"></span>
-                        <!--  -->
-                        <span id="st_email"></span>
-                        <!--  -->
-                        <span id="st_facebook"></span>
-                        <!--  -->
-                        <span id="st_googleplus"></span>
-                        <!--  -->
-                        <span id="st_pinterest"></span>
-                        <!--  -->
+                        <!--  --> <span id="st_twitter"></span>
+                        <!--  --> <span id="st_linkedin"></span>
+                        <!--  --> <span id="st_email"></span>
+                        <!--  --> <span id="st_facebook"></span>
+                        <!--  --> <span id="st_googleplus"></span>
+                        <!--  --> <span id="st_pinterest"></span>
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem -->
         </div>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
