--- a/pages/events.html
+++ b/pages/events.html
@@ -97,28 +97,19 @@
                     </tr>
                 </table>
             </div>
-            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
                 <div id="sharebar">
                     <p class="cap">Share this page
-                        <!--  -->
-                        <span id="st_twitter"></span>
-                        <!--  -->
-                        <span id="st_linkedin"></span>
-                        <!--  -->
-                        <span id="st_email"></span>
-                        <!--  -->
-                        <span id="st_facebook"></span>
-                        <!--  -->
-                        <span id="st_googleplus"></span>
-                        <!--  -->
-                        <span id="st_pinterest"></span>
-                        <!--  -->
+                        <!--  --> <span id="st_twitter"></span>
+                        <!--  --> <span id="st_linkedin"></span>
+                        <!--  --> <span id="st_email"></span>
+                        <!--  --> <span id="st_facebook"></span>
+                        <!--  --> <span id="st_googleplus"></span>
+                        <!--  --> <span id="st_pinterest"></span>
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem -->
         </div>
         <blockquote>&nbsp;</blockquote>
     </body>
