--- a/pages/home.html
+++ b/pages/home.html
@@ -33,7 +33,7 @@
                     <!--  --> <a href="./giving.html">Charitable giving</a>
                 </nav>
             </header>
-            <div id="feature">
+            <div id="Feature">
                 <section id="Banner">
                     <img class="fade bnr1" src="../images/banners/home.png"             alt="JOIN US IN DUBAI September 16 – 19, 2013">
                     <img class="fade bnr6" src="../images/banners/tedx.jpg"             alt="Come watch the TEDxUNPlaza conference from the Wells Fargo booth Tuesday through Thursday.">
