--- a/pages/test.html
+++ b/pages/test.html
@@ -34,7 +34,7 @@
                     <!--  --> <a href="./giving.html">Charitable giving</a>
                 </nav>
             </header>
-            <div id="feature">
+            <div id="Feature" style="display: none;">
                 <section id="Banner">
                     <img class="" src="../images/banners/exploreDubaiPage.png" alt="">
                 </section>
