--- a/pages/events.html
+++ b/pages/events.html
@@ -33,7 +33,7 @@
                     <!--  --> <a href="./giving.html">Charitable giving</a>
                 </nav>
             </header>
-            <div id="feature">
+            <div id="Feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/sibosEventsPage.png" alt="">
                     <img class="reins small" src="../images/header/reins.png" alt="">
